--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "file-browser",
   "author": "David Dombrowsky",
   "version": "0.2.3",
-  "description": "file-browser allows embedding of a web-enabled file browser in your node site",
+  "description": "file-browser with json-editor lib",
   "keywords": [
     "filebrowser",
     "file browser",
