--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "file-browser",
-  "author": "David Dombrowsky",
-  "version": "0.2.3",
+  "name": "json-browser",
+  "author": "madbonez",
+  "version": "1.0.0",
   "description": "file-browser with json-editor lib",
   "keywords": [
     "filebrowser",
