--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-browser",
+  "name": "json-file-browser",
   "author": "madbonez",
   "version": "1.0.0",
   "description": "file-browser with json-editor lib",
@@ -12,10 +12,10 @@
   "bin": {
     "file-browser": "./index.js"
   },
-  "homepage": "https://github.com/ddombrowsky/file-browser",
+  "homepage": "https://github.com/madbonez/file-browser",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ddombrowsky/file-browser.git"
+    "url": "https://github.com/madbonez/file-browser.git"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
@@ -29,7 +29,7 @@
   },
   "main": "file-browser",
   "bugs": {
-    "url": "https://github.com/ddombrowsky/file-browser/issues"
+    "url": "https://github.com/madbonez/file-browser/issues"
   },
   "license": "MIT"
 }
