--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-file-browser",
   "author": "madbonez",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "file-browser with json-editor lib",
   "keywords": [
     "filebrowser",
@@ -10,7 +10,7 @@
     "fileshare"
   ],
   "bin": {
-    "json-file-browser": "./index.js"
+    "json-file-browser": "./cli.js"
   },
   "homepage": "https://github.com/madbonez/file-browser",
   "repository": {
